json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,117 @@
 {
  "items": [
   {
+    "id": "uCQJH2FcSBe090HliG8pVA",
+    "url": "https://stackoverflow.com/jobs/198617/scrum-master-xapo?a=14BOLJoJVXlS",
+    "title": "Scrum Master at Xapo  ",
+    "tags": [
+      "DBG:surround``OR(no,no W central) W offic",
+      "DBG:surround``OR(work,2W(work,remot)) 3W from 2W OR(wherev,wherev,where)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 8, 2018 5:06:11 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2><span>Scrum Master</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Backend Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Banking, Bitcoin, Cryptocurrency</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>51-200 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Xapo | No office location<br></div><h3>Technologies</h3><div></div><div>scrum</div>                <h3>Job description</h3>                <div><p>Xapo is a leading Bitcoin wallet that provides the tools you need to purchase bitcoins, then manage them through our easy -to - use an online wallet, or store them in Xapo’s free ultra-secure vault. Xapo is one of the biggest custodians of BTC in the world. We offer the most secure, regulated and convenient option for institutions. Xapo is backed up by top venture capital firms, and VC investors of Xapo are among the top VC firms in Silicon Valley and the world.</p><p>We are experiencing rapid growth and we want to ensure the continuous provision of quality support to our customers. We are currently looking for a Scrum Master to work with our development teams.</p><p><strong>RESPONSIBILITIES</strong></p><p>Looking to increase our Development team significantly and with this, we require a Scrum Master / Product Delivery to oversee Application Development Product Delivery. You are the Scrum Master that oversees the Application Development Team. Ensuring the team meets their objects and product delivery timelines.</p><p>You will have management responsibility of a team of developers. You are tech savvy enough to help drive delivery of multiple ongoing projects and offer solutions when a tech problem arise. Know how to deal with issues, get it resolved and move on, don`t get stuck in the weeds.</p><p>The ideal candidate</p><p>. Understands Scrum Framework (ceremonies, backlog, roles, purpose, agile manifesto)</p><p>· Understands the Software Development Life Cycle and release management</p><p>· Has the ability to time box team ceremonies</p><p>· Has autonomy to work with a team without support</p><p>· Efficiently coordinates teams efforts within an Agile Release Train</p><p>· Autonomously handles conflicts/ issues/impediments within one or across teams</p><p>· Identifies opportunities to improve productivity and clarity to carry over a defined plan</p><p>· Structures Program issues in a clear way</p><p><strong>Education and/or Experience:</strong></p><p><strong>Must Have Skills:</strong></p><p>Development Background - (2-3Y)</p><p>Flawless Oral, Written, Verbal communication</p><p>Agile Scrum methodology</p><p>Ownership of delivery and timelines</p><p>Software Development</p><p><strong>Nice To Have Skills:</strong></p><p>Scrum Master / Agile Certification a Plus</p><p>PMP certification</p><p>Bitcoins or Financial Services experience</p>                </div>            <div>        <a href='https://xapo.recruitee.com/o/scrum-master-london' rel='nofollow'>                        Apply now        </a></div>            <h3>About Xapo</h3>            <div><p>Xapo is a leading bitcoin wallet, and we have a mission to bring bitcoin to the everyday lives of people across the world. Our business is growing fast, and we want to make sure we can keep providing the best quality support to our customers. We’re known for our fast responses to users, positive attitude, and a real desire to find the best working solutions to the people who chose to use Xapo’s products and services.</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Attractive compensation – highly competitive!</span>                            </li>                            <li>                                <span></span>                                <span>Remote job/working from wherever you want!</span>                            </li>                            <li>                                <span></span>                                <span>Flexible working hours</span>                            </li>                            <li>                                <span></span>                                <span>Equity opportunities</span>                            </li>                            <li>                                <span></span>                                <span>Stock Options Grant</span>                            </li>                    </ul>                "
+  },
+  {
+    "id": "TNfs2ATLR5qsLtOdRXPCHg",
+    "url": "http://jobmote.com/jobs/21517-senior-salesforce-consultant-engagement-manager-remote-opportunity",
+    "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE OPPORTUNITY)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 8, 2018 6:21:41 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p>Zennify is looking for a qualified candidate to join their team as a Senior Salesforce Consultant with a strong Financial Services Background. The individual will be responsible for managing strategic engagements with clients, including designing and delivering scalable solutions using Salesforce.com and other cloud-based technologies. The individual will work with a team to implement mid- and large-scale customer projects encompassing process analysis &amp; design, system requirements &amp; configuration, change management, training and deployment. Clients range from local, small and mid-sized companies to multi-national enterprise corporations and state and federal agencies.</p><p><strong>THIS IS A REMOTE POSITION.</strong> Zennify is headquartered in Boise, ID with another office located in Sacramento, CA. Working remote, candidates need to be prepared for up to 30% travel to both headquarters and client locations. Current clients are located in the West.</p><p>Must be eligible to work in the US as we are not currently sponsoring visas.</p><p><strong>Responsibilities</strong></p><p>· Lead delivery teams to execute all project implementation phases including project planning, requirements gathering, solution design, development, system and user testing, deployment, training and post go live support</p><p>· Manage customer relationships and day-to-day interactions &amp; escalations</p><p>· Oversee process driven customer conversations and workshops related to sales processes, customer service, marketing automation and operational processes</p><p>· Define project short and long-term goals, identify success criteria, and coordinate client and delivery resource roles and responsibilities</p><p>· Drive delivery teams to produce on­-time, high quality, scalable and suitable services and deliverables</p><p>· Contribute to pre-sales customer scoping sessions with the Business Development Team &amp; assist with project proposal development</p><p>· Contribute to a collaborative team environment by encouraging and leading solution brainstorming, internal knowledge sharing and skill development</p><p><strong>Qualities of the Ideal Candidate</strong></p><ul><li>Thrives in a team-based, high energy and fast-paced environment</li><li>Service-oriented and innately driven to produce outstanding customer satisfaction and results</li><li>Enjoys discovering, learning about and implementing new technologies</li><li>Analytical and prone to logically and methodically work through problems</li><li>Strong aptitude for prioritization and multi-tasking in a deadline-driven environment</li><li>A positive demeanor with exceptional interpersonal skills with respect to internal and external interactions and relationships</li><li>Ability to meet travel requirements, when applicable (no more than 20% travel expected)</li><li>A desire to proactively contribute to, and enhance, team outputs</li><li>Experience working in Financial Services or Banking</li><li>Working knowledge of integration software such as Mulesoft, Jitterbit, Informatica</li></ul><p><strong>Preferred Qualifications</strong></p><ul><li>One or more of the following Salesforce Certifications: Sales Cloud Consultant, Service Cloud Consultant, Community Cloud Consultant, Financial Services Cloud Accredidation</li><li>Strong Financial Services background</li><li>Experience working with one or more of the following platforms: Ncino, Core Logic, Orion, Loan Origination Systems</li><li>Understanding of Core Banking Systems (Fiserv, Symitar, etc)</li></ul><p>Company DescriptionAt Zennify, we know how to focus, build and balance. We know systems and can untangle even the most complex of technical messes to ensure everything is running in sync. Our expertise in the Salesforce suite of products has helped bring balance to hundreds of clients. We evaluate existing technologies, recommend unique cloud-based solutions and expertly build solutions. We take into account our clients' specific needs as well as their existing infrastructure to develop context laden, elegant solutions. Simply put, Zennify brings competing interests, incompatible systems and seemingly unlinked challenges into alignment to develop technology solutions that drive businesses forward. </p><p>Our team is comprised of gritty, passionate problem-solvers. We have the vision to create lasting, long-term solutions for our clients. Because we view our clients as partners, we're deeply invested in our work and the success of our projects. At Zennify, innovation is in our every breath. We're motivated to increase efficiencies and ultimately help the bottom line of our client's business. We dig deep. Zennify works hard to understand the needs of our clients and align those needs with working, effective solutions.</p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "8NDCEWTaSia5yJWQTTiAEg",
+    "url": "http://jobmote.com/jobs/21429-technical-consultant-100-remote",
+    "title": "Technical Consultant - 100% Remote",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:windows/dotnet/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=16, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 7, 2018 9:21:03 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Functional Consultant (m / w) - 100% Remote!!</p><p>Nigel Frank International is looking for a Functional Consultant (m / f) with technical knowledge of Active Directory and Windows Server for a permanent position at a software company in Zurich as soon as possible.</p><p>Your role:</p><ul><li><p>Implementation of the company's software for external clients</p></li><li><p>Consultation and support of the external clients</p></li><li><p>Support of the company in marketing conferences and trade shows</p></li><li><p>Participate in capacity planning and technology reviews with the team</p></li><li><p>Apply technologies to implement business strategies and solve business problems</p></li></ul><p>Your profile:</p><ul><li><p>A minimum of 2-3 years of experience as a technical consultant</p></li><li><p>Technical know-how and expertise in Active Directory and Windows Server</p></li><li><p>Fluency in English, German a welcome benefit</p></li><li><p>Ability to understand and fulfill the technical requirements of a customer</p></li><li><p>Experience in public speaking at public events, conferences or webinars</p></li></ul><p>Your advantages:</p><ul><li><p>100% remote work</p></li><li><p>CHF 80'000 - 125'000 depending on candidate experience</p></li><li><p>Attractive compensation with advanced benefits</p></li></ul><p>Are you interested and fit the requirements? Send me your current CV to today. I am happy to assist you at for questions and further job offers at any time.</p><p>I look forward to hearing from you!</p><p></p></div></div><div></div></div></div>"
+  },
+  {
     "id": "QsQS2FG7QsOEkUboZ73XxQ",
     "url": "https://remote.co/job/insurance-underwriter/",
     "title": "Insurance Underwriter",
