json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,46 @@
 {
  "items": [
   {
+    "id": "DuhLn8TZS-6fbMtUcZamtg",
+    "url": "http://jobmote.com/jobs/21619-ios-developer-remote",
+    "title": "iOS Developer REMOTE",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=12, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=9, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 8, 2018 11:20:41 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p>100% REMOTE</p><ul><li>Mobile development for iOS</li><li>Excellent code reading techniques</li><li>Be comfortable in a Scrum team, using lean and Agile methodologies</li><li>Experience in TDD, unit testing, continuous integration or Jenkins is a plus</li><li>Strong familiarity and use of Objective -C and swift</li><li>Proven success (that you can show) of a few apps that you have successfully developed yourself</li><li>Dedication to testing, checking codes quality, reviewing other people's code and compiling documentation using Agile methodologies</li></ul><p>Company DescriptionInnovative but established firm with growth opportunities</p></div></div><div></div></div></div>"
+  },
+  {
     "id": "UfH6kJEORmyDIH55LMobxQ",
     "url": "https://remote.com/jobs/browse/preview/software-tester",
     "title": "Software Tester",
