--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,82 @@
 {
  "items": [
   {
+    "id": "MncRPyaGQTOcse-Pl8o3Fw",
+    "url": "https://news.ycombinator.com/item?id=17724302",
+    "title": "aware3.com | Kansas City, MO | REMOTE | Full-time Remote & Kansas City We help non-profits connect with their communities ...",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:php/php/10",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=4, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=1, gamedev=0, php=10, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/php",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "php"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 9, 2018 4:10:08 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>aware3.com | Kansas City, MO | REMOTE | Full-time<p>Remote &amp; Kansas City</p><p>We help non-profits connect with their communities via technology. Currently still a small team, but we must be doing something right, because we're growing.</p><p>We’re currently seeking two roles, a Senior PHP Developer and a Senior Native Developer help take our platform to its next iteration. Lots more detail in our job posting below.</p><p>I’m the hiring manager and would love you to apply here:</p><p>PHP - <a href='https://a3a.me/686c5' rel='nofollow'>https://a3a.me/686c5</a></p><p>iOS &amp; Android - <a href='https://a3a.me/54Y5b' rel='nofollow'>https://a3a.me/54Y5b</a><span>              </span></p><div>        <p>                      <u></u>                        </p></div></span>"
+  },
+  {
+    "id": "UACdZujQT5qy_ejW2MfiHQ",
+    "url": "http://workinstartups.com/job-board/job/71798/try-yourself-in-a-cool-early-stage-startup-at-kitnations/",
+    "title": "Try yourself in a cool early-stage Startup!",
+    "tags": [
+      "DBG:surround``OR(you,we,employe,develop,engin,abl,workmat) 2W work 2W from 2W home",
+      "DBG_TECH1:k/t/w:twitter-bootstrap/frontend/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "KitNations",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "GBP",
+      "minValue": 1,
+      "maxValue": 1,
+      "info": "",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 9, 2018 11:24:10 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "A great opportunity to see for yourself what a very-early-stage startup looks like from inside. <br /><br />We will be developing together the coolest project for millennials living abroad : a survival kit connected to a chatbot that welcomes people anywhere in the world!<br /><br />I need someone that can learn fast and can adapt to any situation, just like an entrepreneur does. I am the founder of KitNations, and I created a survival kit for people settling in London (and soon Paris, Montreal, LA, Singap...).<br /><br />The job will consist of:<br /><br />1. Contacting pubs, bars, restaurants all over London to create partnerships<br /><br />2. Creating some cool content and posting on Insta/Fb/Snap...<br /><br />3. Help me in many other tasks, grinding daily, and see THE REAL STARTUP LIFE from inside.<br /><br />If you always wondered what it could be like to launch your own company, bootstrap, grind, and make a cool product, join me!<br /><br />You're not afraid of pushing it to the limits and propose new ideas/learn new skills everyday? The ambience is very relaxed, but we will be grinding hard, and I will be raising a good seed in a few months, so why not hire you later on? <br /><br />I can't pay you though (not yet). Flexible hours. Looking for someone that likes things done well. <br /><br />Juste send me a DM with the skills you already have (Indesign? Photoshop? Coding? Photography? Video? I want someone that is eager to learn and multi-task). No formalities please!<br /><br />The job is in Camberwell/Brixton but you can work from home, we'll see together. <br /><br />Check what we do before you apply and if you believe in the idea, DM and tell me in a few words what you would like to bring to the concept!<br />"
+  },
+  {
     "id": "uCQJH2FcSBe090HliG8pVA",
     "url": "https://stackoverflow.com/jobs/198617/scrum-master-xapo?a=14BOLJoJVXlS",
     "title": "Scrum Master at Xapo  ",
