json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,114 @@
 {
  "items": [
   {
+    "id": "cPtjN_IcRI60qfgYMv4cQw",
+    "url": "https://remote.co/job/medical-coder-12/",
+    "title": "Medical Coder",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:jersey/java/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=8, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "Change Healthcare",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 10, 2018 4:55:16 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Medical Coder at <span>Change Healthcare</span></h2><div><span><i></i> Remote</span>         | <span> Entry-level </span></div><div>            <ul><li><strong>Full time</strong></li><li><strong>R2620</strong></li><li><strong>Remote – Tennessee</strong></li><li><strong>Remote – Alaska</strong></li><li><strong>Remote – Alabama</strong></li><li><strong>Remote – Maryland</strong></li><li><strong>Remote – Maine</strong></li><li><strong>Remote – Louisiana</strong></li><li><strong>Remote – Kentucky</strong></li><li><strong>Remote – Kansas</strong></li><li><strong>Remote – Iowa</strong></li><li><strong>Remote – Indiana</strong></li><li><strong>Remote – Wyoming</strong></li><li><strong>Remote – Oregon</strong></li><li><strong>Remote – Wisconsin</strong></li><li><strong>Remote – New Hampshire</strong></li><li><strong>Remote – Nevada</strong></li><li><strong>Remote – West Virginia</strong></li><li><strong>Remote – Nebraska</strong></li><li><strong>Remote – Washington</strong></li><li><strong>Remote – Montana</strong></li><li><strong>Remote – Virginia</strong></li><li><strong>Remote – Missouri</strong></li><li><strong>Remote – Vermont</strong></li><li><strong>Remote – Mississippi</strong></li><li><strong>Remote – Utah</strong></li><li><strong>Remote – Texas</strong></li><li><strong>Remote – Minnesota</strong></li><li><strong>Remote – Ohio</strong></li><li><strong>Remote – Michigan</strong></li><li><strong>Remote – Massachusetts</strong></li><li><strong>Remote – South Dakota</strong></li><li><strong>Remote – South Carolina</strong></li><li><strong>Remote – North Dakota</strong></li><li><strong>Remote – Rhode Island</strong></li><li><strong>Remote – North Carolina</strong></li><li><strong>Remote – Pennsylvania</strong></li><li><strong>Remote – New York</strong></li><li><strong>Remote – New Mexico</strong></li><li><strong>Remote – New Jersey</strong></li><li><strong>Remote – Illinois</strong></li><li><strong>Remote – Idaho</strong></li><li><strong>Remote – Hawaii</strong></li><li><strong>Remote – Georgia</strong></li><li><strong>Remote – Florida</strong></li><li><strong>Remote – Delaware</strong></li><li><strong>Remote – DC</strong></li><li><strong>Remote – Connecticut</strong></li><li><strong>Remote – Colorado</strong></li><li><strong>Remote – Oklahoma</strong></li><li><strong>Remote – California</strong></li><li><strong>Remote – Arkansas</strong></li><li><strong>Remote – Arizona</strong></li></ul><p>Transforming the future of healthcare isn’t something we take lightly. It takes teams of the best and the brightest, working together to make an impact.<br>As one of the largest healthcare technology companies in the U.S., we are a catalyst to accelerate the journey toward improved lives and healthier communities.<br>Here at Change Healthcare, we’re using our influence to drive positive changes across the industry, and we want motivated and passionate people like you to help us continue to bring new and innovative ideas to life.</p><p>If you’re ready to embrace your passion and do what you love with a company that’s committed to supporting your future, then you belong at Change Healthcare.<br>Pursue purpose. Champion innovation. Earn trust. Be agile. Include all.</p><p><strong>Empower Your Future. Make a Difference.</strong></p><ul><li>Extensive knowledge of ICD-10-CM and ICD-9-CM diagnosis coding, including guidelines, Coding Clinic and other industry reference sources;</li><li>Strong clinical knowledge related to chronic illness diagnoses;</li><li>Excellent understanding of clinical documentation requirements in order to support an active diagnosis;</li><li>Knowledge of medical terminology, anatomy &amp; physiology, and medical prescription &amp; over-the-counter drugs used to treat conditions required;</li><li>Exemplary attention to detail and critical thinking skills;</li><li>Ability to meet or exceed charts per hour productivity based on project type</li><li>Ability to maintain a minimum quality assurance (QA) score of 95% or higher;</li><li>Excellent knowledge of medical record review and abstraction;</li><li><strong>Ability to work remotely with minimal supervision;</strong></li><li>Commitment to meet tight deadlines;</li><li>Outstanding proficiency in Microsoft Office applications (including Microsoft Excel, Word and Outlook);</li><li>Ability to quickly learn/adapt to new data entry and medical billing &amp; coding software applications, as necessary;</li><li>Access to high-speed internet, and use of company issued computer and phone equipment required.</li></ul><p><strong>EDUCATION:</strong></p><ul><li>Current coding certification by the AAPC and/or AHIMA required;</li><li>Active RN or LPN license a plus;</li><li>AAPC CRC certification a plus;</li><li>CRC preferred;</li><li>A minimum of one year HEDIS abstraction experience preferred;</li><li>A minimum of one year coding experience in risk adjustment, ProFee and/or outpatient coding required.</li></ul><p><strong>PHYSICAL REQUIREMENTS:</strong></p><ul><li>Physical Activities – While performing the duties of this job, the employee is regularly required to reach with hands and arms and talk or hear. The employee is frequently required to sit. The employee is occasionally required to stand and walk;</li><li>Weight Lifted/Force Exerted – The employee’s job does not require weight to be lifted or force exerted;</li><li>Vision Requirements – Specific vision abilities required by this job include close vision and the ability to adjust focus;</li><li>Ability to be flexible with working hours based on business or operational needs, as determined by management;</li><li>Other duties as assigned.</li></ul><p>Join our team today where we are creating a better coordinated, increasingly collaborative, and more efficient healthcare system!</p>        </div><div>        <a href='https://changehealthcare.wd5.myworkdayjobs.com/en-US/Search/job/Remote---Tennessee/Medical-Coder_R2620' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "w4KuKaBYQFO06jqyRlhSyw",
+    "url": "http://jobmote.com/jobs/21860-software-implementation-consultant-local-remote",
+    "title": "Software Implementation Consultant - Local Remote!",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG:surround``remot 6W OR(dai,daili,week,weekli,month,monthli) 5W OR(offic,headquart,onsit)",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Squiresgroup",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 10, 2018 7:21:48 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Overview: The Squires Group has an exciting direct hire, primarily remote, opportunity for a<br><strong>Software Implementation Consultant</strong><br>. Are you innovative and ready to learn a new data management platform that helps companies solve big problems and manage billions of dollars in single instances?<br>Our client is an award-winning firm, and their CEO was a finalist for the SmartCEO magazine GovStar Award. As a new, cutting-edge, data management platform provider that helps companies solve problems quickly, our client supports many U. S. Government and Fortune 500 clients. In this role, you will become an expert with their unique platform, and work with clients to implement the software that captures and communicates crucial information to make important data-driven decisions fast.<br>Our client offers excellent benefits, including<br><strong>paid health insurance for employee and family</strong><br>! This role is primarily remote, with once per week presence needed onsite in Columbia, MD or Alexandria, VA. Candidates must be local to MD/DC/NOVA. Per our Federal Government Contract, candidates must be<br><strong>U. S. Citizens and able to obtain a Secret clearance</strong><br>.<br>Qualifications</p><ul><li><p>5 years of experience with the following:</p><ul><li>Oracle PL/SQL</li><li>HTML</li><li>Data Modeling</li></ul></li><li><p>Excellent customer facing skills</p></li><li><p>Per our Federal Government Contract, candidates must be<br><strong>U. S. Citizens and able to obtain a Secret clearance</strong><br>.<strong>Preferred Qualifications</strong></p></li><li><p>Knowledge of Enterprise Architecture, IT Portfolio Management, Asset Management and/or Metadata Management</p></li><li><p>TS/SCI clearance<strong>A Thousand Reasons to Give Referral Program:</strong><br>Refer a friend, and you both can earn $1,000 if we place them in a new job opportunity! If you see a position posted by The Squires Group and know the perfect person for the job, please click here to send us your referral.<br><strong>The Squires Group, Inc. is an Equal Opportunity/Affirmative Action Employer.</strong></p></li></ul></div></div><div></div></div></div>"
+  },
+  {
+    "id": "N1wRGGqqTJC2ChLnvwD4hA",
+    "url": "http://jobmote.com/jobs/21803-oracle-retail-rpm-technical-consultant-50-remote",
+    "title": "Oracle Retail RPM Technical Consultant (50% Remote)",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:extjs/frontend/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Vigilant Technologies",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 10, 2018 2:21:11 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Skill : Oracle Retail RPM Technical Consultant (50% Remote) Location : Virginia Beach, VA Duration : Long-term Job description: Proficiency in Oracle Retail Price Management (RPM Version 16) Application architecture with exposure to solution design and coding. Proficient in SQL, PL/SQL and creation and modification of database tables, packages, procedures, functions, Triggers, Index, Sequence and view. Deep knowledge in RPM V16 batch job architecture, performance tuning skills and scheduling dependencies. Excellent communication skills 50% remote Our Company: Vigilant is Oracle's leading Cloud ERP partner in U.S. and Canada. Vigilant is an Oracle Platinum Partner, uniquely equipped and certified to sell and support the majority of Oracle solutions: Hardware, Database, Applications, Cloud, etc. Please provide me a latest copy of your updated resume. Thank you Regards, Pramod Kumar E: Ph: , Ext 202 - provided by Dice </p><p>Retail Price Management, RPM, PL/SQL </p></div></div><div></div></div></div>"
+  },
+  {
     "id": "MncRPyaGQTOcse-Pl8o3Fw",
     "url": "https://news.ycombinator.com/item?id=17724302",
     "title": "aware3.com | Kansas City, MO | REMOTE | Full-time Remote & Kansas City We help non-profits connect with their communities ...",
